inccorect div wrap child 3 fixed

--- a/styles.css
+++ b/styles.css
@@ -458,6 +458,12 @@ h4 {
   );
 }
 
+.plan:nth-child(3) .plan__stripe {
+  color: #f7fafc;
+    background: linear-gradient(115deg, rgb(245, 101, 101) 0%, rgb(254, 178, 178) 100%);
+}
+
+
 .plan__top {
   padding: 32px;
   text-align: center;
@@ -470,6 +476,11 @@ h4 {
 }
 
 .plan:nth-child(1) .plan__middle {
+  border-top: 2px solid rgb(229, 231, 235);
+  border-bottom: 2px solid rgb(229, 231, 235);
+}
+
+.plan:nth-child(3) .plan__middle {
   border-top: 2px solid rgb(229, 231, 235);
   border-bottom: 2px solid rgb(229, 231, 235);
 }
